--- a/home/home.html
+++ b/home/home.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
+      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../home/home.css">
-    <title>Main Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+    <title>Document</title>
 </head>
 
 <body>
@@ -18,23 +21,29 @@
     </div>
     <div class="container">
         <div class="row">
-            <form>
                 <div class="form-group form-inline">
-
                     <div class="row">
                         <div class="col-sm-1">
                             <h4 class="listNumber">1</h4>
                         </div>
                         <div class="col-sm-3">
-                            <h4>Choose a range of dates</h4>
+                            <h4 class="date-label">Choose a range of dates</h4>
                         </div>
-                        <div class="col-sm-4">
-                            <label class="col-form-label">From</label>
-                            <input type="date" class="form-control" id="fromDateInput">
+                        <div class="col-sm-3">
+                           <div class="form-inline">
+                                <div class="form-group">
+                                    <label for="to-date">From</label>
+                                    <input type="date" class="form-control" id="from-date">
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-4">
-                            <label class="col-form-label">To</label>
-                            <input type="date" class="form-control">
+                        <div class="col-sm-3">
+                            <div class="form-inline">
+                                <div class="form-group">
+                                    <label for="to-date">To</label>
+                                    <input type="date" class="form-control" id="to-date">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -42,38 +51,48 @@
                             <h4 class="listNumber">2</h4>
                         </div>
                         <div class="col-sm-3">
-                            <h4>Choose a location</h4>
+                            <h4 class="location-label">Choose a location</h4>
                         </div>
                         <div class="col-sm-3">
-                            <label class="radio btn btn-primary">
-                   <input type="radio" name="stateZip" id="stateRadioButton"> By State
-                                     </label>
-                            <span class="dropdown">
-                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select State
-                                            <span class="caret"></span></button>
-                            <ul class="dropdown-menu text-center">
-                                <li class="text-center"><a href="#">New Jersey</a></li>
-                                <li class="text-center"><a href="#">New York</a></li>
-                                <li class="text-center"><a href="#">Washington</a></li>
-                            </ul>
-                            </span>
+                            <div class="form-inline">
+                                <div class="form-group">
+                                    <label for="state">State</label>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                        <input type="radio" aria-label="...">
+                                        </span>
+                                        <div class="btn-group btn-block">
+                                        <button type="button" class="btn btn-default dropdown-toggle btn-block" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search state <span class="caret"></span></button>
+                                        <ul class="dropdown-menu dropdown-menu-right">
+                                            <li><a href="#">New York</a></li>
+                                            <li><a href="#">New Jersey</a></li>
+                                            <li><a href="#">Connecticut</a></li>
+                                            <li><a href="#">Massachusetts</a></li>
+                                        </ul>
+                                        </div><!-- /btn-group -->
+                                    </div><!-- /input-group -->
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-4">
-                            <label class="btn btn-primary">
-                           <input type="radio" name="stateZip" id="stateRadioButton"> By Zip
-                            </label>
-                             <input type="text" class="form-control">
-                        </div>
-                        <div class="col-sm-1">
-                            <span class="dropdown">
-                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Mile Range
-                                            <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                                <li class="text-center"><a href="#">10</a></li>
-                                <li class="text-center"><a href="#">20</a></li>
-                                <li class="text-center"><a href="#">30</a></li>
-                            </ul>
-                            </span>
+                        <div class="form-inline">
+                            <div class="form-group">
+                            <label for="zip-code">Zip code</label>
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                <input type="radio" aria-label="...">
+                                </span>
+                                <input type="text" class="form-control" aria-label="..." placeholder="zip code">
+                                <div class="input-group-btn">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Miles <span class="caret"></span></button>
+                                <ul class="dropdown-menu dropdown-menu-right">
+                                    <li><a href="#">10</a></li>
+                                    <li><a href="#">20</a></li>
+                                    <li><a href="#">30</a></li>
+                                    <li><a href="#">40</a></li>
+                                </ul>
+                                </div><!-- /btn-group -->
+                            </div><!-- /input-group -->
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -86,11 +105,16 @@
                     </div>
 
                 </div>
-
         </div>
-        </form>
     </div>
     </div>
+
+
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
