--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -30,7 +30,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a href="#" class="navbar-left "><img src="images/swift_logo.PNG" class="swift-logo"></a>
+        <a href="#" class="navbar-left "><img src="../images/swift_logo.PNG" class="swift-logo"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
