--- a/search results/search-result.html
+++ b/search results/search-result.html
@@ -21,6 +21,7 @@
 
 <div class="container">
 
+  <!-- Search Results and search input -->
   <div class="row">
     <div class="col-md-12">
       <div class="form-group serach-reults">
@@ -33,6 +34,7 @@
     </div>
   </div>
 
+  <!-- my simchas filter -->
   <div class="row">
     <div class="col-md-2">
      <div class="form-inline">
@@ -65,6 +67,8 @@
             </div>
         </div>
       </div>
+
+      <!-- Search zip code -->
       <div class="col-md-3">
           <div class="form-inline">
             <div class="form-group">
@@ -87,6 +91,8 @@
             </div>
           </div>
     </div>
+
+    <!-- serach state -->
     <div class="col-md-2">
        <div class="form-inline">
             <div class="form-group">
@@ -110,6 +116,7 @@
     </div>
   </div>
 
+  <!-- nav pills -->
   <div class="row">
     <div class="col-md-12">
       <ul class="nav nav-pills nav-justified">
@@ -121,6 +128,7 @@
     </div>
   </div>
 
+  <!-- cards -->
   <div class="row">
     <div class="col-md-3 col-xs-6">
       <div class="results">
