--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -43,7 +43,7 @@
          <button type="button" class="btn navbar-btn">Login</button>
          <button type="button" class="btn navbar-btn">Sign up</button>
         </ul>
-        <ul class="nav navbar-nav navbar-right nav-pills" role="tablist">
+        <ul class="nav navbar-nav navbar-right saved-items" role="tablist">
             <li role="presentation"><a href="#"><span class="badge">3</span> Saved Items <span class="glyphicon glyphicon-user" aria-hidden="true"></span></a></li>
         </ul>
       </div>
