added login and edits

--- a/search results/search-result.html
+++ b/search results/search-result.html
@@ -93,7 +93,7 @@
     </div>
 
     <!-- serach state -->
-    <div class="col-md-2">
+    <div class="col-md-3">
        <div class="form-inline">
             <div class="form-group">
             <label for="state">Search state</label>
@@ -101,8 +101,9 @@
                 <span class="input-group-addon">
                   <input type="radio" aria-label="...">
                 </span>
-                <div class="btn-group btn-block">
-                  <button type="button" class="btn btn-default dropdown-toggle btn-block" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search state <span class="caret"></span></button>
+                <input type="text" class="form-control" aria-label="..." placeholder="state">
+                <div class="input-group-btn">
+                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search state <span class="caret"></span></button>
                   <ul class="dropdown-menu dropdown-menu-right">
                     <li><a href="#">New York</a></li>
                     <li><a href="#">New Jersey</a></li>
@@ -139,6 +140,18 @@
     <div class="col-md-3 col-xs-6">
       <div class="results">
         <img class="result-image img-responsive" src="../images/hall.jpeg" alt="results">
+          <div class="result-name">The Palace</div>
+      </div>
+    </div>
+    <div class="col-md-3 col-xs-6">
+      <div class="results">
+        <img class="result-image img-responsive" src="https://www.herecomestheguide.com/images/venues_large/JewishComCntrSF5.jpg" alt="results">
+          <div class="result-name">The Palace</div>
+      </div>
+    </div>
+    <div class="col-md-3 col-xs-6">
+      <div class="results">
+        <img class="result-image img-responsive" src="http://i.chossonkallah.com/brochures/mbjc-br-1.jpg" alt="results">
           <div class="result-name">The Palace</div>
       </div>
     </div>
