--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -13,6 +13,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="navbar.css">
   <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -30,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a href="#" class="navbar-left "><img src="../images/swift_logo.PNG" class="swift-logo"></a>
+        <a class="navbar-brand swift-logo" href="#"><span class="logo-1">SWIFT</span><span class="logo-2">Events</span></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -40,11 +41,11 @@
           <li><a class="about" href="#">ABOUT</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-         <button type="button" class="btn navbar-btn">Login</button>
-         <button type="button" class="btn navbar-btn">Sign up</button>
+         <button type="button" class="btn navbar-btn login-btn">Login</button>
+         <button type="button" class="btn navbar-btn login-btn">Sign up</button>
         </ul>
-        <ul class="nav navbar-nav navbar-right saved-items" role="tablist">
-            <li role="presentation"><a href="#"><span class="badge">3</span> Saved Items <span class="glyphicon glyphicon-user" aria-hidden="true"></span></a></li>
+        <ul class="nav navbar-nav navbar-right" role="tablist">
+            <button class="btn navbar-btn saved-items" role="presentation"><a href="#"><span class="badge">3</span> Saved Items <span class="glyphicon glyphicon-user" aria-hidden="true"></span></a></button>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
