--- a/search results/search-result.html
+++ b/search results/search-result.html
@@ -36,7 +36,7 @@
 
   <!-- my simchas filter -->
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 col-xs-6">
      <div class="form-inline">
         <div class="form-group">
           <label for="search">My simchas</label>
@@ -51,7 +51,8 @@
         </div>
       </div>
     </div>
-      <div class="col-md-2">
+    <div class="col-xs-offset-6 col-xs-1 visible-xs-block">&nbsp;</div>
+      <div class="col-md-2 col-xs-6">
         <div class="form-inline">
           <div class="form-group">
             <label for="from-date">From</label>
@@ -59,7 +60,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-xs-6">
          <div class="form-inline">
             <div class="form-group">
               <label for="to-date">To</label>
@@ -69,7 +70,7 @@
       </div>
 
       <!-- Search zip code -->
-      <div class="col-md-3">
+      <div class="col-md-3 col-xs-6">
           <div class="form-inline">
             <div class="form-group">
               <label for="zip-code">Search zip code</label>
@@ -93,29 +94,27 @@
     </div>
 
     <!-- serach state -->
-    <div class="col-md-3">
-       <div class="form-inline">
-            <div class="form-group">
-            <label for="state">Search state</label>
-              <div class="input-group">
-                <span class="input-group-addon">
-                  <input type="radio" aria-label="...">
-                </span>
-                <input type="text" class="form-control" aria-label="..." placeholder="state">
-                <div class="input-group-btn">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search state <span class="caret"></span></button>
-                  <ul class="dropdown-menu dropdown-menu-right">
-                    <li><a href="#">New York</a></li>
-                    <li><a href="#">New Jersey</a></li>
-                    <li><a href="#">Connecticut</a></li>
-                    <li><a href="#">Massachusetts</a></li>
-                  </ul>
-                </div><!-- /btn-group -->
-              </div><!-- /input-group -->
-            </div>
-       </div>
-    </div>
-  </div>
+    <div class="col-md-3 col-xs-6">
+      <label for="state">Search state</label>
+      <div class="input-group btn-group">
+        <span class="input-group-addon">
+          <input type="radio" aria-label="...">
+        </span>
+        <div class="btn-group btn-block" >
+          <button type="button" class="btn btn-default dropdown-toggle btn-block" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search State <span class="caret"></span></button>
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li><a href="#">New York</a></li>
+            <li><a href="#">New Jersey</a></li>
+            <li><a href="#">Connecticut</a></li>
+            <li><a href="#">Massachusetts</a></li>
+          </ul>
+        </div>
+      </div><!-- /input-group -->
+    </div><!-- /.col-lg-6 -->
+
+  </div><!-- /.row-->
+
+
 
   <!-- nav pills -->
   <div class="row">
@@ -146,6 +145,12 @@
     <div class="col-md-3 col-xs-6">
       <div class="results">
         <img class="result-image img-responsive" src="https://www.herecomestheguide.com/images/venues_large/JewishComCntrSF5.jpg" alt="results">
+          <div class="result-name">The Palace</div>
+      </div>
+    </div>
+    <div class="col-md-3 col-xs-6">
+      <div class="results">
+        <img class="result-image img-responsive" src="http://i.chossonkallah.com/brochures/mbjc-br-1.jpg" alt="results">
           <div class="result-name">The Palace</div>
       </div>
     </div>
