--- a/search results/search-result.html
+++ b/search results/search-result.html
@@ -19,7 +19,7 @@
 <body>
 
 
-<div class="container">
+<div class="container searchResultsContainerPadding">
 
   <!-- Search Results and search input -->
   <div class="row">
